add navlink to foodresource page

--- a/food-resource.html
+++ b/food-resource.html
@@ -22,6 +22,11 @@
             <a href="#" class="image avatar"><img src="images/aikoProfilePhoto.png" alt="Aiko's profile photo" /></a>
             <h1>I am Aiko Takemura</h1>
             <h2>I'm a web developer + web marketer from Japan.</h2>
+            <a class="navlink" href="#portfolio-header">My Portfolio</a>
+            <a class="navlink" href="#publications-header">My Publications</a>
+            <a class="navlink" href="#aboutme-header">About Me</a>
+            <a class="navlink" href="#myskills-header">My Skills</a>
+            <a class="navlink" href="#getintouch-header">Get In Touch</a>
         </div>
     </header>
 
