Add Authentic Grace page

--- a/food-resource.html
+++ b/food-resource.html
@@ -19,7 +19,8 @@
     <!-- Header -->
     <header id="header">
         <div class="inner">
-            <a href="#" class="image avatar"><img src="images/aikoProfilePhoto.png" alt="Aiko's profile photo" /></a>
+            <a href="index.html" class="image avatar"><img src="images/aikoProfilePhoto.png"
+                    alt="Aiko's profile photo" /></a>
             <h1>I am Aiko Takemura</h1>
             <h2>I'm a web developer + web marketer from Japan.</h2>
             <a class="navlink" href="index.html#portfolio-header">My Portfolio</a>
@@ -43,7 +44,6 @@
             <a class="portfolio-title" href="https://breadbeacon.netlify.com/" target="_blank">
                 <img src="images/breadBeacon_highres.png" alt="Image of Bread Beacon website" width="75%">
             </a>
-            <br>
             <br>
             <h2>Project Challenge</h2>
             <p>Insufficient food and a lack of stable housing are major issues for many college students in the U.S.
