--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
                 </article>
 
                 <article class="col-6 col-12-xsmall work-item">
-                    <a href="https://authenticgrace.netlify.com/" class="image fit thumb" target="_blank"><img
-                            src="images/authenticGrace.png" alt="Image of Authentic Grace website" /></a>
+                    <a href="https://aikot1125.github.io/portfolio/authentic-grace" class="image fit thumb"
+                        target="_blank"><img src="images/authenticGrace.png"
+                            alt="Image of Authentic Grace website" /></a>
                     <h3>E-commerce Website
                         <a href="https://github.com/aikot1125/MCC_BoutiqueShop"
                             class="icon brands fa-github github-repo" target="_blank"></a>
