--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             </header>
             <div class="row">
                 <article class="col-6 col-12-xsmall work-item">
-                    <a href="https://aikot1125.github.io/portfolio/food-resource" class="image fit thumb"><img
-                            src="images/breadBeacon.png" alt="Image of Bread Beacon website" /></a>
+                    <a href="https://aikot1125.github.io/portfolio/food-resource" class="image fit thumb">
+                        <img src="images/breadBeacon.png" alt="Image of Bread Beacon website" /></a>
                     <h3>Food Resource Website
                         <a href="https://github.com/amymcgowan/mcc-c4-t2-final-project"
                             class="icon brands fa-github github-repo" target="_blank"></a>
@@ -55,9 +55,8 @@
                 </article>
 
                 <article class="col-6 col-12-xsmall work-item">
-                    <a href="https://aikot1125.github.io/portfolio/authentic-grace" class="image fit thumb"
-                        target="_blank"><img src="images/authenticGrace.png"
-                            alt="Image of Authentic Grace website" /></a>
+                    <a href="https://aikot1125.github.io/portfolio/authentic-grace" class="image fit thumb">
+                        <img src="images/authenticGrace.png" alt="Image of Authentic Grace website" /></a>
                     <h3>E-commerce Website
                         <a href="https://github.com/aikot1125/MCC_BoutiqueShop"
                             class="icon brands fa-github github-repo" target="_blank"></a>
