--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@
             </ul>
             <!-- </header> -->
             <ul class="actions">
-                <li><a href="#" class="button" target="_blank">Download Resume (WIP)</a></li>
+                <li><a href="https://aikot1125.github.io/portfolio/resume" class="button" target="_blank">See Resume</a>
+                </li>
             </ul>
         </section>
 
