--- a/resume.html
+++ b/resume.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 
 <head>
     <meta charset="utf-8">
@@ -6,6 +7,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/resume.css">
+    <script src="https://kit.fontawesome.com/b98fb790ca.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -15,20 +18,32 @@
         </section>
         <section class="contact">
             <ul>
-                <li>(973)315-5064</li>
-                <li>aiko.takemura@gmail.com</li>
-                <li>aikot1125.github.io/portfolio</li>
+                <!-- <li>(973)315-5064</li> -->
+                <a href="mailto:aiko.takemura@gmail.com" class="contactlinks">
+                    <li><i class="far fa-envelope-open"></i> aiko.takemura@gmail.com</li>
+                </a>
+                <a href="aikot1125.github.io/portfolio" class="contactlinks">
+                    <li><i class="far fa-folder-open"></i> aikot1125.github.io/portfolio</li>
+                </a>
             </ul>
         </section>
         <section class="photo">
             <img src="images/aikoProfilePhoto.png" alt="Aiko's profile photo">
         </section>
         <section class="about">
-            <p>Aiko worked in the advertising industry in Japan for 12 years. In her most recent job at Facebook, she
-                contributed to the growth and success of the market both as a marketing consultant and a product
-                marketing manager. During her career, Aiko has always been passionate about operational excellence and
-                project management. She is a well organized, data-driven and responsible collaborator who enjoys cross
-                functional teamwork.
+            <div class="sub-header-whole">
+                <p class="sub-header-deco"></p>
+                <p class="sub-header">About Me</p>
+            </div>
+            <p>Aiko has 10 years of experience in the advertising industry. In her most recent job at Facebook, she
+                contributed to the growth and success of the Japan market both as a digital marketing consultant and a
+                product marketing manager.<br>
+                During her career, Aiko has always been passionate about operational excellence and project management.
+                She is a well organized, data-driven and responsible collaborator who enjoys cross functional
+                teamwork.<br>
+                As a mom of two boys, Aiko has growing interest and passion towards education and health industries. In
+                the next step of her career, she looks forward to contributing her experience and skills in those
+                industries.
             </p>
         </section>
         <section class="work">
@@ -40,10 +55,10 @@
                 <p class="work-title">Product Marketing Manager</p>
                 <p>Facebook | 04/2017 - 06/2019</p>
                 <p class="work-subtitle">Responsibilities:</p>
-                <p>Drove product adoption and go-to-market strategies for new and enhanced ad
+                <p>Drive product adoption and go-to-market strategies for new and enhanced ad
                     products in the
                     Japan market, focusing mainly on Instagram</p>
-                <p>Distilled and surfaced meaningful market feedback to
+                <p>Distill and surface meaningful market feedback to
                     product teams in the headquarter</p>
                 <p class="work-subtitle">Accomplishments: </p>
                 <p>Drove Instagram Stories ads adoption in partnership with sales and contributed to its growth of up to
@@ -60,10 +75,10 @@
                 <p class="work-title">Client Solutions Manager</p>
                 <p>Facebook | 03/2014 - 03/2017</p>
                 <p class="work-subtitle">Responsibilities:</p>
-                <p>Built and managed key client relationships with a focus on driving revenue, advertiser education and
+                <p>Build and manage key client relationships with a focus on driving revenue, advertiser education and
                     advertiser satisfaction</p>
-                <p>Built expertise in platform and product as well as media planning, strategy and measurement</p>
-                <p>Used data and analytics to build a consultative solution for advertisers</p>
+                <p>Build expertise in platform and product as well as media planning, strategy and measurement</p>
+                <p>Analyze data to build a consultative solution for advertisers</p>
                 <p class="work-subtitle">Accomplishments:</p>
                 <p>Led project management of multiple brand measurement studies for a world leading beverage
                     company, which led to a substantial increase in their Facebook investment </p>
@@ -71,7 +86,7 @@
                     brand in Japan, which successfully drove results and ended with a strong revenue growth</p>
                 <p>Co-owned an APAC wide cross functional project for developing a measurement solutions playbook for
                     sales teams, which was later scaled globally</p>
-                <p>(other verticals?)</p>
+                <!--(other verticals?)-->
             </div>
             <div class="work-item">
                 <p class="work-title">Account Executive</p>
@@ -96,7 +111,7 @@
 
             </div>
             <div class="work-item">
-                <p class="work-title">Event Producer</p>
+                <p class="work-title">Associate Event Producer</p>
                 <p>ADK | 04/2007 - 07/2010</p>
                 <p class="work-subtitle">Responsibilities:</p>
                 <p>Planned and executed various promotional events ranging from business expos
@@ -116,16 +131,19 @@
                     <li>Facebook Certified Buying Professional</li>
                     <li>Google Ads Search Certified</li>
                     <li>Google Ads Display Certified</li>
+                    <li>Google Ads Video Certified</li>
                     <li>Google Search Ads 360 Certified</li>
                 </ul>
             </div>
             <div>
-                <p class="skill-title">Marketing Knowledge</p>
+                <p class="skill-title">Marketing/Professional Skills</p>
                 <ul class="skill-detail">
                     <li>Digital Marketing</li>
                     <li>Digital Advertising</li>
                     <li>Brand Development</li>
                     <li>Digital Ad Measurement</li>
+                    <li>Data Analysis</li>
+                    <li>Project Management</li>
                 </ul>
             </div>
             <div>
@@ -141,6 +159,10 @@
             <div class="sub-header-whole">
                 <p class="sub-header-deco"></p>
                 <p class="sub-header">Education</p>
+            </div>
+            <div class="edu-item">
+                <p class="edu-title">Moms Can Code School</p>
+                <p class="edu-detail">August - December 2019</p>
             </div>
             <div class="edu-item">
                 <p class="edu-title">Data Foundations Nanodegree Program</p>
